# CryptoMacro-Analyst-Bot

./: .env.example  .gitignore  Makefile  README.md  SCOPE.md  docker-compose.yml
.claude/: rules.md
analyzer/: Dockerfile  pyproject.toml
api/: Dockerfile  pyproject.toml
api/src/: config.py  health.py  main.py
api/src/routes/: eval.py
api/tests/: test_health.py
bot/: Dockerfile  pyproject.toml
collector/: Cargo.toml  Dockerfile
collector/src/: collector.rs  config.rs  lib.rs  main.rs  models.rs  nats_client.rs  supervisor.rs
collector/tests/: integration.rs
configs/: loader.py  providers.yaml  symbols.yaml  thresholds.yaml
dashboard/: Dockerfile  index.html  package.json
database/: run_migrations.py  seed.py
docs/: ONCHAIN_PROVIDER.md
eval/: __init__.py  backtest.py  (+3 more)
processor/: Dockerfile  conftest.py  pyproject.toml
processor/src/: backfill.py  config.py  db.py  main.py  models.py  normalizer.py
processor/src/alerts/: breakout.py  config.py  cooldown.py  correlation_break.py  crowded_leverage.py  db.py  deleveraging_event.py  engine.py  leadership_rotation.py  models.py  news_event.py  persistence.py  publisher.py  regime_shift.py  symbol_multipliers.py  validator.py  vol_expansion.py
processor/src/coingecko/: collector.py  db.py
processor/src/coinglass/: collector.py  db.py  heatmap_collector.py  heatmap_db.py  models.py
processor/src/cross_features/: cache.py  db.py  engine.py  indicators.py
processor/src/cryptopanic/: collector.py  db.py
processor/src/deribit/: collector.py  db.py
processor/src/derivatives/: cache.py  config.py  db.py  engine.py  indicators.py
processor/src/eval/: backtest.py  db.py  feature_backfill.py  metrics.py  metrics_service.py  tracker.py  tuner.py
processor/src/features/: cache.py  config.py  db.py  engine.py  indicators.py
processor/src/llm/: client.py  context.py  event_analyzer.py  news_classifier.py  publisher.py  scheduler.py
processor/src/llm/prompts/: daily_brief.py  deleveraging_event.py  event_inflow.py  event_liq.py  event_macro.py  news_classify.py  weekly_deep.py
processor/src/ops/: degrade.py
processor/src/regime/: classifier.py  config.py  db.py  engine.py
processor/src/yahoo_finance/: collector.py  db.py
processor/tests/: test_alert_breakout.py  test_alert_cooldown.py  test_alert_correlation_break.py  test_alert_engine.py  test_alert_leadership_rotation.py  test_alert_persistence.py  test_alert_regime_shift.py  test_alert_symbol_multipliers.py  test_alert_vol_expansion.py  test_backfill.py  test_claude_client.py  test_coingecko_collector.py  test_coinglass_collector.py  test_coinglass_heatmap_collector.py  test_context_builder.py  test_cross_features_engine.py  test_cross_features_indicators.py  test_crowded_leverage.py  test_cryptopanic_collector.py  test_daily_brief_scheduler.py  test_deleveraging_event.py  test_deribit_collector.py  test_derivatives_engine.py  test_ev1_alert_tracker.py  test_ev2_metrics.py  test_ev3_tuner.py  test_ev4_backtest.py  test_ev4b_feature_backfill.py  test_event_analyzer.py  test_fe3_macro_stress.py  test_features_engine.py  test_features_indicators.py  test_golden_payloads.py  test_macro_stress.py  test_models.py  test_news_classifier.py  test_news_event_evaluator.py  test_normalizer.py  test_ops_degrade.py  test_positioning_bias.py  (+2 more)
processor/tests/fixtures/: golden_breakout.json  golden_leadership_rotation.json  golden_vol_expansion.json
(+74 files in other folders)
