[package]
name = "cryptomacro-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tokio-tungstenite = "0.26"
async-nats = "0.38"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
